# Self-righting-boat

./: GZ rectangle:rond  GZ_rectangle_with_circle_ring.py  README.md  conda-lock.yml  environment.yml  hydrostatic_2d.py  hydrostatic_2d_example.py  makefile  pyproject.toml
docs/source/: conf.py  index.rst  usage.rst
examples/: GZ_rectangle_with_circle_ring.py  hydrostatic_2d_example.py  mouse_interaction.py
tests/: test_hydrostatic_2d.py
