[tool.poetry]
name = "self-righting-boat"
version = "0.1.0"
description = ""
authors = ["Baptiste LABAT <baptiste.labat@syroco>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
geomdl = "^5.3.1"
numpy = "1.23.5"
matplotlib = "^3.10.0"
scipy = "1.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
