[project]
name = "self-righting-boat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "geomdl==5.3.1",
    "matplotlib>=3.10.0",
    "numpy==1.23.5",
    "pyqt6>=6.8.0",
    "scipy==1.14",
]

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]
